# PCLN.Terracotta

./: CHANGELOG.md  Directory.Build.props  README.md
.github/workflows/: ci.yml
docs/: architecture.md  development.md  implementation-status.md  network.md  protocol.md  scaffolding.md  security.md
src/PCLN.Terracotta.Plugin/: PCLN.Terracotta.Plugin.csproj  PluginEntry.cs  PluginIds.cs  plugin.json
src/PCLN.Terracotta.Plugin/Application/: TerracottaController.cs
src/PCLN.Terracotta.Plugin/Diagnostics/: DiagnosticCollector.cs  ErrorCodeCatalog.cs
src/PCLN.Terracotta.Plugin/Infrastructure/: HelperIpcClient.cs  HelperProcessManager.cs  HelperProtocolException.cs
src/PCLN.Terracotta.Plugin/Services/: TerracottaLocalizer.cs
src/PCLN.Terracotta.Plugin/Views/: TerracottaDiagnosticsWindow.cs  TerracottaPage.cs
src/Terracotta.Helper/: Cargo.toml
src/Terracotta.Helper/src/: lib.rs
src/Terracotta.Helper/src/ipc/: session.rs
src/Terracotta.Helper/src/network/: backend.rs  credentials.rs  discovery.rs  easytier.rs  mod.rs  port_forward.rs
src/Terracotta.Helper/src/room/: service.rs
src/Terracotta.Helper/tests/: helper_process.rs
tests/PCLN.Terracotta.Plugin.Tests/: FoundationTests.cs
