[package]
name = "terracotta-helper"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.2", features = ["derive"] }
hmac = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
zeroize = { version = "1.9.0", features = ["derive", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Pipes", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
